Added header back button behavior based on page

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32"  href="../imgs/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"  href="../imgs/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png"  href="../imgs/favicons/favicon.ico">
+    <script src="../js/header.js" defer></script>
     <link href="../css/base.css" rel="stylesheet">
     <link href="../css/shared.css" rel="stylesheet">
     <link href="../css/menu.css" rel="stylesheet">
@@ -30,12 +31,16 @@
                 </svg>
             </div>
             <div class="lvlx-header-logo-container">
-                <img src="../imgs/levelx55-header-logo.png" alt="LevelX55 Logo" class="lvlx-header-logo">
+                <a href="">
+                    <img src="../imgs/levelx55-header-logo.png" alt="LevelX55 Logo" class="lvlx-header-logo">
+                </a>
             </div>
             <div class="lvlx-header-back-button-container">
-                <svg class="lvlx-header-back-button" width="40" height="40" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14.4375 26.8125L4.125 16.5M4.125 16.5L14.4375 6.1875M4.125 16.5H28.875" stroke="#E8E8E9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+                <a class="lvlx-header-back-button-link">
+                    <svg class="lvlx-header-back-button" width="40" height="40" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4375 26.8125L4.125 16.5M4.125 16.5L14.4375 6.1875M4.125 16.5H28.875" stroke="#E8E8E9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>
             </div>
         </div>
         
