Typo in comments on piadine.html

--- a/html/piadine.html
+++ b/html/piadine.html
@@ -52,7 +52,7 @@
     
     <!--End Header-->
 
-    <!--Panini-->
+    <!--Piadine-->
 
     <div class="lvlx-cards-container">
 
@@ -122,7 +122,7 @@
 
     </div>
 
-    <!--End Panini-->
+    <!--End Piadine-->
 
 </body>
 </html>
