--- a/html/fritti.html
+++ b/html/fritti.html
@@ -12,7 +12,6 @@
     <link rel="icon" type="image/png" sizes="16x16"  href="../imgs/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png"  href="../imgs/favicons/favicon.ico">
 
-    <script src="../js/header.js" defer></script>
     <link href="../css/shared.css" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -42,7 +41,7 @@
             </a>
         </div>
         <div class="lvlx-header-back-button-container">
-            <a class="lvlx-header-back-button-link">
+            <a class="lvlx-header-back-button-link" onclick="javascript:history.back()">
                 <svg class="lvlx-header-back-button" width="40" height="40" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.4375 26.8125L4.125 16.5M4.125 16.5L14.4375 6.1875M4.125 16.5H28.875" stroke="#E8E8E9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
