--- a/html/piadine.html
+++ b/html/piadine.html
@@ -42,7 +42,7 @@
             </a>
         </div>
         <div class="lvlx-header-back-button-container">
-            <a class="lvlx-header-back-button-link">
+            <a class="lvlx-header-back-button-link" onclick="javascript:history.back()">
                 <svg class="lvlx-header-back-button" width="40" height="40" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.4375 26.8125L4.125 16.5M4.125 16.5L14.4375 6.1875M4.125 16.5H28.875" stroke="#E8E8E9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
