Corrected typo in info card

--- a/html/panini.html
+++ b/html/panini.html
@@ -62,7 +62,7 @@
                     <div class="lvlx-card-title">Info</div>
                     <div class="lvlx-card-description">
                         <ul>
-                            <li>non si possono fare aggiunte.</li>
+                            <li>non si possono fare aggiunte fuori menu.</li>
                             <li>Doppio hamburger +€3,5</li>
                             <li>Hamburger vegano +€1</li>
                             <li>panino senza glutine +€2</li>
