--- a/html/piadine.html
+++ b/html/piadine.html
@@ -63,7 +63,7 @@
                     <div class="lvlx-card-title">Info</div>
                     <div class="lvlx-card-description">
                         <ul>
-                            <li>non si possono fare aggiunte.</li>
+                            <li>non si possono fare aggiunte fuori menu.</li>
                         </ul>
                     </div>
                 </div>
