Corrected Birre image link

--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
 
         <div class="lvlx-menu-row">
             <a href="./birre.html" class="lvlx-menu-item">
-                <img src="../imgs/icons/panini-icon.png" alt="Panini" class="lvlx-menu-item-icon">
+                <img src="../imgs/icons/birre-icon.png" alt="Panini" class="lvlx-menu-item-icon">
                 <div class="lvlx-menu-item-text">BIRRE</div>
             </a>
             <a href="./cocktails.html" class="lvlx-menu-item">
